# roach

./: Cargo.toml  README.md
doc/: crates.js  index.html  search-index.js
doc/roach/: enum.ArchiveError.html  struct.Archive.html  struct.ToArchive.html  struct.Transaction.html  trait.DataConverter.html  trait.DataTransform.html  trait.Direction.html  trait.Mutability.html  trait.StorageBackend.html
doc/roach/backend/: index.html  sidebar-items.js  struct.FileBackend.html
doc/roach/bytemuck/: struct.Pod.html
doc/roach/rmp_serde/: struct.Rmp.html
doc/roach/zstd/: struct.Zstd.html
doc/src/roach/: bytemuck.rs.html  lib.rs.html  rmp_serde.rs.html
doc/trait.impl/core/error/: trait.Error.js
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/: help.html  settings.html  src-files.js
docs/roach/: all.html  index.html  sidebar-items.js  struct.AccessGuard.html  struct.Const.html  struct.FromArchive.html  struct.Mut.html  struct.Pod.html  struct.PodGuard.html  struct.Rmp.html  struct.StringGuard.html  struct.Zstd.html  trait.ArchiveType.html  trait.ToWriter.html
docs/roach/backend/: struct.InMemoryBackend.html
docs/roach/bytemuck/: struct.PodGuard.html
docs/src/roach/: zstd.rs.html
docs/trait.impl/core/convert/: trait.AsRef.js
docs/trait.impl/core/fmt/: trait.Display.js
docs/trait.impl/core/marker/: trait.Send.js
docs/trait.impl/core/ops/deref/: trait.Deref.js
docs/trait.impl/core/ops/drop/: trait.Drop.js
docs/trait.impl/roach/: trait.Direction.js
src/: bytemuck.rs  lib.rs  rmp_serde.rs  zstd.rs
