[package]
name = "roach"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/roach"
readme = "README.md"
description = """
Rust object archive: strongly-typed persistent key value storage.
"""

[dependencies]
bytemuck = { version = "1.14.0", default-features = false, features = [ "extern_crate_std" ], optional = true }
redb = { version = "1.4.0", default-features = false }
rmp-serde = { version = "1.1.2", default-features = false, optional = true }
semver = { version = "1.0.20", default-features = false, features = [ "std" ] }
serde = { version = "1.0.188", default-features = false, optional = true }
thiserror = { version = "1.0.50", default-features = false }
wasm_sync = { version = "0.1.0", default-features = false }
zstd = { git = "https://github.com/DouglasDwyer/zstd-rs", rev = "4a5e9a15b00aeecb3866fd3d420d8ae91f12b151", default-features = false, optional = true }
zstd-safe = { git = "https://github.com/DouglasDwyer/zstd-rs", rev = "4a5e9a15b00aeecb3866fd3d420d8ae91f12b151", default-features = false, features = [ "experimental" ], optional = true }

[features]
rmp-serde = [ "dep:rmp-serde", "dep:serde" ]
zstd = [ "dep:zstd", "dep:zstd-safe" ]

[package.metadata.docs.rs]
all-features = true