[package]
name = "roach"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/roach"
readme = "README.md"
description = """
Rust object archive: strongly-typed persistent key value storage.
"""

[dependencies]
bytemuck = { version = "1.16.1", default-features = false, features = [ "extern_crate_std" ], optional = true }
mutability_marker = { version = "0.1.1", default-features = false }
redb = { version = "1.5.1", default-features = false }
rmp-serde = { version = "1.3.0", default-features = false, optional = true }
semver = { version = "1.0.23", default-features = false, features = [ "std" ] }
serde = { version = "1.0.204", default-features = false, optional = true }
thiserror = { version = "1.0.63", default-features = false }
wasm_sync = { version = "0.1.2", default-features = false }
zstd = { version = "0.13.2", default-features = false, optional = true }
zstd-safe = { version = "7.2.0", default-features = false, features = [ "experimental" ], optional = true }

[features]
rmp-serde = [ "dep:rmp-serde", "dep:serde" ]
zstd = [ "dep:zstd", "dep:zstd-safe" ]

[package.metadata.docs.rs]
all-features = true